Fix mouse pointer to drawing - gap problem
 Canvas pixels (width and height) were made equal to the number of
 physical pixels inside the canvas excluding the border and padding of
 the canvas.

--- a/packages/react_frontend_app/src/styles/Canvas.css
+++ b/packages/react_frontend_app/src/styles/Canvas.css
@@ -1,7 +1,8 @@
 canvas {
+  box-sizing: content-box;
   display: block;
-  border: 1px solid black;
+  border: 10px solid black;
   /* border-left: 10px solid black; */
-  width: 60%;
+  width: 600px;
   height: 891px;
 }
